Fix right column alignment issues

--- a/src/components/home/About/index.module.css
+++ b/src/components/home/About/index.module.css
@@ -55,7 +55,7 @@
 
   .story {
     display: grid;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 28px;
     margin-bottom: 112px;
   }
